@@ -1,3 +1,7 @@
+2001-05-04  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/c-api/client.c: clear autoCache in cln_SelectRegion().
+
 2001-04-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* contrib/ogdi_info/ogdi_info.c: improve region bounds reporting.
